--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
   <meta property="og:image:height" content="1024" />
   <!-- Aos Animation Scroll -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+
 </head>
 
 <body>
